--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "luxon": "^1.26.0",
     "markdown-it": "^12.1.0",
     "markdown-it-anchor": "^8.1.2"
+  },
+  "dependencies": {
+    "markdown-it-image-figures": "^2.0.0"
   }
 }
