--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.7.2",
     "clean-css": "^5.2.2",
-    "gulp": "^4.0.2",
+    "fund": "^1.0.0",
+    "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
+    "node-fetch": "^2.6.6",
     "npm-watch": "^0.11.0",
-    "watch": "^1.0.2"
+    "watch": "^0.13.0"
   },
   "author": "Holger Koenemann",
   "devDependencies": {
