--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/gohugo-theme-ananke"]
 	path = themes/gohugo-theme-ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+[submodule "themes/gohugo-ananke-theme"]
+	path = themes/gohugo-ananke-theme
+	url = https://github.com/SF-Nexus/gohugo-ananke-theme
