--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://sf-nexus.github.io/sf-nexus-hugo-site/'
+baseURL = '/'
 languageCode = 'en-us'
 title = 'The SF Nexus'
 theme = "gohugo-theme-ananke"
