--- a/config.toml
+++ b/config.toml
@@ -3,24 +3,12 @@ languageCode = 'en-us'
 title = 'The SF Nexus'
 theme = "gohugo-theme-ananke"
 canonifyURLS=true
-languages:
-  en:
-    languageName: English
-    contentDir: content
-    menu:
-      main:
-        - name: About
-          url: "/About"
-          weight: "1"
-        - name: People
-          url: "/People"
-          weight: "2"
-        - name: Data
-          url: "/Data"
-          weight: "3"
-        - name: OCR
-          url: "/OCR"
-          weight: "4"
-        - name: Models
-          url: "/Models"
-          weight: "5"
+[menu]
+[[menu.main]]
+  name = 'About'
+  pageRef = '/About'
+  weight = 1
+[[menu.main]]
+  name = 'Data'
+  pageRef = '/Data'
+  weight = 1
